--- a/src/CheeseMVC/Views/Category/Index.cshtml
+++ b/src/CheeseMVC/Views/Category/Index.cshtml
@@ -3,20 +3,19 @@
     <h2>Index</h2>
 
 
+    @foreach (var category in Model)
+    {
+        <li>
+            <ul>@category.Name</ul>
+        </li>
+    }
 
- 
+    <p><a asp-controller="Category" asp-action="Add">Add Category</a></p>
 
-        @foreach (var category in Model)
-        {
-            <li>
-                <ul>@category.Name</ul>
-            </li>
-        }
-   
 
     @if (Model.Count == 0)
-{
+    {
     <p>No categories yet!</p>
-}
+    }
 
     <p><a asp-controller="Category" asp-action="Add">Add Category</a></p>
