--- a/src/CheeseMVC/Views/Menu/Index.cshtml
+++ b/src/CheeseMVC/Views/Menu/Index.cshtml
@@ -9,11 +9,10 @@
 @foreach (var menu in Model)
 {
     <li>
-        <a asp-controller="Menu" asp-action="ViewMenu" asp-route="@menu.ID"><ul>@menu.Name</ul></a>
-</li>
-} 
+        <a asp-controller="Menu" asp-action="ViewMenu" asp-route-id="@menu.ID">@menu.Name</a>
+    </li>
+}
 
-<p><a asp-controller="Menu" asp-action="Add">Add Menu</a></p>
 
 
 @if (Model.Count == 0)
@@ -21,3 +20,5 @@
     <p>No categories yet!</p>
 }
 
+
+<p><a asp-controller="Menu" asp-action="Add">Add Menu</a></p>
