--- a/src/CheeseMVC/Views/Menu/Index.cshtml
+++ b/src/CheeseMVC/Views/Menu/Index.cshtml
@@ -1,23 +1,12 @@
-﻿
-@{
-    ViewData["Title"] = "Index";
-}
+﻿@model IEnumerable<CheeseMVC.Models.Menu>
 
-<h2>Index</h2>
-
+<h1>Menus</h1>
 
 @foreach (var menu in Model)
 {
     <li>
         <a asp-controller="Menu" asp-action="ViewMenu" asp-route-id="@menu.ID">@menu.Name</a>
     </li>
-}
-
-
-
-@if (Model.Count == 0)
-{
-    <p>No categories yet!</p>
 }
 
 
