This is a restarted version of my Liftoff Project.  I have gotten up to the point of Migrations (Database is working!).

--- a/src/CheeseMVC/Views/Menu/Add.cshtml
+++ b/src/CheeseMVC/Views/Menu/Add.cshtml
@@ -1,10 +1,14 @@
-﻿@model CheeseMVC.ViewModels.AddMenuViewModel
+﻿@*
+
+
+
+@model MovieMVC.ViewModels.AddMenuViewModel
 
 @{
-    ViewBag.Title = "New Menu";
+    // ViewBag.Title = "New Menu";          This is what I wrote here before
 }
 
-<h2>Add</h2>
+<h2>Add Menu</h2>
 
 
 
@@ -19,3 +23,6 @@
     <input type="submit" value="Create Menu" />
 
 </form>
+
+
+*@
