--- a/src/CheeseMVC/Views/Menu/AddItem.cshtml
+++ b/src/CheeseMVC/Views/Menu/AddItem.cshtml
@@ -1,10 +1,11 @@
-﻿@model CheeseMVC.ViewModels.AddMenuItemViewModel
+﻿
+@*
+
+@model MovieMVC.ViewModels.AddMenuItemViewModel
 
 @{
     ViewBag.Title = "Add Item to Menu: " + Model.Menu.Name;
 }
-
-<h2>Add</h2>
 
 
 
@@ -21,3 +22,6 @@
     <input type="submit" value="Add Item" />
 
 </form>
+
+
+*@
