--- a/src/CheeseMVC/Views/Menu/Index.cshtml
+++ b/src/CheeseMVC/Views/Menu/Index.cshtml
@@ -1,4 +1,8 @@
-﻿@model IEnumerable<CheeseMVC.Models.Menu>
+﻿
+
+@*
+
+@model IEnumerable<MovieMVC.Models.Menu>
 
 <h1>Menus</h1>
 
@@ -11,3 +15,5 @@
 
 
 <p><a asp-controller="Menu" asp-action="Add">Add Menu</a></p>
+
+*@
