--- a/src/CheeseMVC/Views/Shared/_Layout.cshtml
+++ b/src/CheeseMVC/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - CheeseMVC</title>
+    <title>@ViewData["Title"] - MovieMVC</title>
 
     <environment names="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
@@ -26,13 +26,13 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-area="" asp-controller="Cheese" asp-action="Index" class="navbar-brand">CheeseMVC</a>
+                <a asp-area="" asp-controller="Movie" asp-action="Index" class="navbar-brand">MovieMVC</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a asp-controller="Cheese" asp-action="Index">Cheeses</a></li>
-                    <li><a asp-controller="Category" asp-action="Index">Categories</a></li>
-                    <li><a asp-controller="Menu" asp-action="Index">Menus</a></li>
+                    <li><a asp-controller="Movie" asp-action="Index">Movies</a></li>
+                    <li><a asp-controller="Genre" asp-action="Index">Genres</a></li>
+                    
                 </ul>
             </div>
         </div>
@@ -41,7 +41,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; 2017 - CheeseMVC</p>
+            <p>&copy; 2017 - MovieMVC</p>
         </footer>
     </div>
 
