--- a/src/CheeseMVC/Views/Shared/_Layout.cshtml
+++ b/src/CheeseMVC/Views/Shared/_Layout.cshtml
@@ -31,7 +31,7 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li><a asp-controller="Movie" asp-action="Index">Movies</a></li>
-                    <li><a asp-controller="Genre" asp-action="Index">Genres</a></li>
+                    <li><a asp-controller="Browse" asp-action="Index">Browse</a></li>
                     
                 </ul>
             </div>
