The database is working again.  I have added StreamingService objects that act like Genre objects.  I  am about to start working on Browse functionality again.

--- a/src/CheeseMVC/Views/Movie/Index.cshtml
+++ b/src/CheeseMVC/Views/Movie/Index.cshtml
@@ -33,4 +33,4 @@
 }
 
 
-<a asp-controller="Genre" asp-action="Add">Add Genre</a> | <a asp-controller="Movie" asp-action="Add">Add Movie</a>
+<a asp-controller="Genre" asp-action="Add">Add Genre</a> | <a asp-controller="Movie" asp-action="Add">Add Movie</a> | <a asp-controller="StreamingService" asp-action="Add">Add Streaming Service</a>
