--- a/src/CheeseMVC/Views/Movie/Add.cshtml
+++ b/src/CheeseMVC/Views/Movie/Add.cshtml
@@ -12,9 +12,8 @@
         <span asp-validation-for="Name"></span>
     </div>
     <div class="form-group">
-        <label asp-for="StreamingService"></label>
-        <input class="form-control" asp-for="StreamingService" />
-        <span asp-validation-for="StreamingService"></span>
+        <label asp-for="StreamingServiceID"></label>
+        <select asp-for="StreamingServiceID" asp-items="Model.StreamingServices"></select>
     </div>
 
     <div class="form-group">
@@ -23,6 +22,8 @@
     </div>
 
     <p>If you don't see a genre you're looking for, try <a asp-controller="Genre" asp-action="Add">adding</a> one!</p>
+
+    <p>Same goes for <a asp-controller="StreamingService" asp-action="Add">streaming services!</a> </p>
 
     <input type="submit" value="Add Movie" />
 
