Fixed the errors that wouldn't let the program even start (there were too many FKs, confusing the system).  And I fixed the Movie index page, allowing StreamingService objects to populate the page.  Now, I will start working on the Browse functionality again.

--- a/src/CheeseMVC/Views/Browse/FilterBy.cshtml
+++ b/src/CheeseMVC/Views/Browse/FilterBy.cshtml
@@ -1,16 +1,15 @@
-﻿@model MovieMVC.ViewModels.SearchMovieViewModel
-
+﻿@model MovieMVC.ViewModels.BrowseTypeViewModel 
 <h1>@Model.Title</h1>
 
 <table>
-    @foreach (var field in Model.Fields)
+    @foreach (var movieFilter in Model.MovieFilters)
     {
         <tr>
             <td>
                 <a asp-controller="Browse"
                    asp-action="MovieListings"
                    asp-route-filter="@Model.Filter"
-                   asp-route-value="@field.Value">@field.Value</a>
+                   asp-route-value="@movieFilter">@movieFilter</a>
             </td>
         </tr>
     }
