--- a/src/CheeseMVC/Views/Movie/Index.cshtml
+++ b/src/CheeseMVC/Views/Movie/Index.cshtml
@@ -20,7 +20,7 @@
     {
         <tr>
             <td>@movie.Title</td>
-            <td>@movie.StreamingService</td>
+            <td>@movie.StreamingService.StreamingService</td> 
             <td>@movie.Genre.Genre</td>
         </tr>
     }
