Commit before class 5.  Still working on Browse functionality, specifically the last method/page.

--- a/src/CheeseMVC/Views/Browse/FilterBy.cshtml
+++ b/src/CheeseMVC/Views/Browse/FilterBy.cshtml
@@ -19,6 +19,8 @@
         }
 </table>
 
+<input type="hidden" name="GenreValueID" value="@Model.Genre.ID" />
+
 }
 
 
@@ -38,5 +40,7 @@ else
             </tr>
         }
     </table>
+
+    <input type = "hidden" name = "StreamingServiceValueID" value = "@Model.StreamingService.ID" />
 
 }
