Just got the MovieListings/BrowseController to work!  Movies are being displayed by their respective Genres!  I just have to do the same for Streaming Services.

--- a/src/CheeseMVC/Views/Browse/FilterBy.cshtml
+++ b/src/CheeseMVC/Views/Browse/FilterBy.cshtml
@@ -19,7 +19,7 @@
         }
 </table>
 
-<input type="hidden" name="GenreValueID" value="@Model.Genre.ID" />
+@*<input type="hidden" name="GenreValueID" value="@Model.Genre.ID" />*@
 
 }
 
@@ -41,6 +41,6 @@ else
         }
     </table>
 
-    <input type = "hidden" name = "StreamingServiceValueID" value = "@Model.StreamingService.ID" />
+    @*<input type = "hidden" name = "StreamingServiceValueID" value = "@Model.StreamingService.ID" />*@
 
 }
