--- a/src/CheeseMVC/Views/Search/Index.cshtml
+++ b/src/CheeseMVC/Views/Search/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model MovieMVC.ViewModels.SearchViewModel
 
-<h1>Model.Title</h1>
+<h1>@Model.Title</h1> 
 
 <form action="/Search/Results">
     <p>
@@ -21,35 +21,36 @@
 
     <h3>@Model.Movies.Count Result(s)</h3>
 
-    <table class="table">
-
-        <tr>
-            <th>Title</th>
-            <th>Streaming Service</th>
-            <td>Genre</td>
-        </tr>
-        
-
-        @foreach (var movie in Model.Movies)
-        {
-            <tr>
-                <td>@movie.Title</td>
-                <td>@movie.StreamingService.StreamingService</td>
-                <td>@movie.Genre.Genre</td>
-            </tr>
-        }
-
-    </table>
-
 
     @if (Model.Movies.Count == 0)
     {
-        <p>We didn't find any movies by that name.  Try again!</p>
+        <p>We didn't find any movies by that name. Try again!</p>
     }
 
+    else
+    {
+
+        <table class="table">
+
+            <tr>
+                <th>Title</th>
+                <th>Streaming Service</th>
+                <td>Genre</td>
+            </tr>
 
 
+            @foreach (var movie in Model.Movies)
+            {
+                <tr>
+                    <td>@movie.Title</td>
+                    <td>@movie.StreamingService.StreamingService</td>
+                    <td>@movie.Genre.Genre</td>
+                </tr>
+            }
 
+        </table>
+
+    }
 
 
 }
