--- a/src/CheeseMVC/Views/Genre/Index.cshtml
+++ b/src/CheeseMVC/Views/Genre/Index.cshtml
@@ -17,4 +17,4 @@
 }
 
 
-<a asp-controller="Genre" asp-action="Add">Add Genre</a> | <a asp-controller="Movie" asp-action="Add">Add Movie</a>
+<a asp-controller="Movie" asp-action="Add">Add Movie</a> | <a asp-controller="Genre" asp-action="Add">Add Genre</a>
