--- a/src/CheeseMVC/Views/Shared/_Layout.cshtml
+++ b/src/CheeseMVC/Views/Shared/_Layout.cshtml
@@ -30,7 +30,7 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a asp-controller="Movie" asp-action="Index">Movies</a></li>
+                    @*<li><a asp-controller="Movie" asp-action="Index">Movies</a></li> *@
                     <li><a asp-controller="Browse" asp-action="Index">Browse</a></li>
                     <li><a asp-controller="Search" asp-action="Index">Search</a></li>
                 </ul>
